--- a/_layouts/newhome.html
+++ b/_layouts/newhome.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <!DOCTYPE html>
 <html lang="en"><head>
   <meta charset="utf-8">
@@ -36,14 +40,13 @@
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home">
-
-          <p>Hi, I am Mariia Tikhomirova, Berlin-based UX writer. I help business to communicate with
-            user — through text. Use my expertise in psychology to create for human-oriented interfaces copy
-            that works. </p>
-
 <h2 class="post-list-heading">Recent projects</h2>
-    
-{{ posts }}
+    <ul class="post-list"><li><span class="post-meta">Nov 6, 2021</span>
+        <h3>
+          <a class="post-link" href="/jekyll/update/2021/11/06/welcome-to-jekyll.html">
+            Welcome to Jekyll!
+          </a>
+        </h3></li></ul>
 
     <!-- <p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a></p> --></div>
 
