--- a/_layouts/newhome.html
+++ b/_layouts/newhome.html
@@ -15,7 +15,7 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="UX writer portfolio" />
 <script type="application/ld+json">
-{"url":"http://localhost:4000/","name":"UX writer portfolio","@type":"WebSite","description":"Mariia Tikhomirova, Berlin-based UX writer","headline":"UX writer portfolio","@context":"https://schema.org"}</script>
+{"url":"http://localhost:4000/","@type":"WebSite","headline":"UX writer portfolio","description":"Mariia Tikhomirova, Berlin-based UX writer","name":"UX writer portfolio","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="UX writer portfolio" /></head>
 <body><header class="site-header" role="banner">
@@ -35,16 +35,21 @@
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home">
-<h2 class="post-list-heading">Recent projects</h2>
-    <ul class="post-list"><li><span class="post-meta">Nov 6, 2021</span>
+        <div class="home"><p>Hi, I am Mariia Tikhomirova, Berlin-based UX writer. I help business to communicate with user — through text. Use my expertise in psychology to create for human-oriented interfaces copy that works. </p>
+<h2 class="post-list-heading">Posts</h2>
+    <ul class="post-list"><li><span class="post-meta">Nov 2, 2021</span>
         <h3>
-          <a class="post-link" href="/jekyll/update/2021/11/06/welcome-to-jekyll.html">
-            Welcome to Jekyll!
+          <a class="post-link" href="/project/2021/11/02/pythagor.html">
+            pythagor.io
+          </a>
+        </h3></li><li><span class="post-meta">Nov 1, 2021</span>
+        <h3>
+          <a class="post-link" href="/project/2021/11/01/iola.html">
+            iola.app
           </a>
         </h3></li></ul>
 
-    <!-- <p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a></p> --></div>
+    <p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a></p></div>
 
       </div>
     </main><footer class="site-footer h-card">
@@ -52,21 +57,19 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">Contacts</h2>
+    <h2 class="footer-heading">UX writer portfolio</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-        <!-- <li class="p-name">UX writer portfolio</li><li><a class="u-email" href="mailto:"></a></li>-->
-      <li><a href="https://www.linkedin.com/in/mariiatikhomirova/">Linkedin</a></li>
-    </ul>
+          <li class="p-name">UX writer portfolio</li><li><a class="u-email" href="mailto:"></a></li></ul>
       </div>
 
       <div class="footer-col footer-col-2"><ul class="social-media-list"></ul>
 </div>
 
       <div class="footer-col footer-col-3">
-        <p>Mariia Tikhomirova<br/>UX writer</p>
+        <p>Mariia Tikhomirova, Berlin-based UX writer</p>
       </div>
     </div>
 
