--- a/_layouts/newhome.html
+++ b/_layouts/newhome.html
@@ -57,20 +57,20 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">UX writer portfolio</h2>
+    <h2 class="footer-heading">Contacts</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li class="p-name">UX writer portfolio</li><li><a class="u-email" href="mailto:"></a></li></ul>
+          <li class="p-name"><a href="https://www.linkedin.com/in/mariiatikhomirova/">LinkedIn</a>></li><li><a class="u-email" href="mailto:"></a></li></ul>
       </div>
 
       <div class="footer-col footer-col-2"><ul class="social-media-list"></ul>
 </div>
 
       <div class="footer-col footer-col-3">
-        <p>Mariia Tikhomirova, Berlin-based UX writer</p>
-      </div>
+        <p>Mariia Tikhomirova,<br/>Berlin-based UX writer</p>
+      </div> 
     </div>
 
   </div>
