--- a/_layouts/newhome.html
+++ b/_layouts/newhome.html
@@ -36,7 +36,7 @@
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><p>Hi, I am Mariia Tikhomirova, Berlin-based UX writer. I help business to communicate with user — through text. Use my expertise in psychology to create for human-oriented interfaces copy that works. </p>
-<h2 class="post-list-heading">Posts</h2>
+<h2 class="post-list-heading">Recent projects</h2>
     <ul class="post-list"><li><span class="post-meta">Nov 2, 2021</span>
         <h3>
           <a class="post-link" href="/project/2021/11/02/pythagor.html">
@@ -62,7 +62,7 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li class="p-name"><a href="https://www.linkedin.com/in/mariiatikhomirova/">LinkedIn</a>></li><li><a class="u-email" href="mailto:"></a></li></ul>
+          <li class="p-name"><a href="https://www.linkedin.com/in/mariiatikhomirova/">LinkedIn</a></li><li><a class="u-email" href="mailto:"></a></li></ul>
       </div>
 
       <div class="footer-col footer-col-2"><ul class="social-media-list"></ul>
