--- a/_layouts/newhome.html
+++ b/_layouts/newhome.html
@@ -35,7 +35,10 @@
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Hi, I am Mariia Tikhomirova, Berlin-based UX writer. I help business to communicate with user — through text. Use my expertise in psychology to create for human-oriented interfaces copy that works. </p>
+        <div class="home">
+
+          {{content}}
+
 <h2 class="post-list-heading">Recent projects</h2>
     <ul class="post-list"><li><span class="post-meta">Nov 2, 2021</span>
         <h3>
