--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,9 @@
           <li class="p-name">
             <a target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg> <span class="username">{{ site.linkedin_username| escape }}</span></a>
           </li>
+          <li class="p-name">
+            <a target="_blank" href="https://github.com//{{ site.github_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg> <span class="username">{{ site.linkedin_username| escape }}</span></a>
+          </li>
         </ul>
       </div>
 
