--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,11 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>
-            <a href="mailto:uxwrtr@gmail.com">Email</a> 
-          </li>
           <li class="p-name">
             <a target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg> <span class="username">{{ site.linkedin_username| escape }}</span></a>
+          </li>
+          <li>
+            <a href="mailto:uxwrtr@gmail.com">email</a> 
           </li>
         </ul>
       </div>
