--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,9 @@ layout: default
 
   {{ content }}
 
-  {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Recent projects" }}</h2>
-    <ul class="post-list">
+  <!-- {%- if site.posts.size > 0 -%} -->
+    <!-- <h2 class="post-list-heading">{{ page.list_title | default: "Recent projects" }}</h2> -->
+    <!-- <ul class="post-list"> -->
       {%- for post in site.posts -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
